<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070707"
    tools:context=".activityAgregar">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/tx_tituloAdd"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/blue_fosf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/style_border_et"
        android:ems="10"
        android:hint="@string/tx_name"
        android:inputType="textPersonName"
        android:textColor="#A5A4A4"
        android:textColorHint="#A5A4A4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edt_ape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/style_border_et"
        android:ems="10"
        android:hint="@string/tx_ape"
        android:inputType="textPersonName"
        android:textColor="#A5A4A4"
        android:textColorHint="#A5A4A4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_name" />

    <EditText
        android:id="@+id/edt_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/style_border_et"
        android:ems="10"
        android:hint="@string/tx_user"
        android:inputType="textPersonName"
        android:textColor="#A5A4A4"
        android:textColorHint="#A5A4A4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_mail" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="84dp"
        android:backgroundTint="#A5A4A4"
        android:onClick="agregarUser"
        android:text="@string/tx_btadd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_user" />

    <EditText
        android:id="@+id/edt_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/style_border_et"
        android:ems="10"
        android:hint="@string/tx_mail"
        android:inputType="textEmailAddress"
        android:textColor="#A5A4A4"
        android:textColorHint="#A5A4A4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_ape" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="#E43E3E"
        android:onClick="cancelar"
        android:text="@string/tx_btCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_user" />
</androidx.constraintlayout.widget.ConstraintLayout>