<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070707"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/hola_mundo"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/blue_fosf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/style_border_et"
        android:ems="10"
        android:hint="@string/ph_n1"
        android:inputType="number"
        android:textColor="#A5A4A4"

        android:textColorHint="#A5A4A4"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/style_border_et"
        android:ems="10"
        android:hint="@string/n_mero_2"
        android:inputType="number"
        android:textColor="#A5A4A4"
        android:textColorHint="#A5A4A4"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_num1" />

    <Button
        android:id="@+id/bt_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        android:backgroundTint="#A5A4A4"
        android:onClick="calcular"
        android:text="@android:string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btimg_add"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#A5A4A4"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_action"
        app:layout_constraintVertical_bias="0.51"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="277dp"
        android:layout_height="69dp"
        android:layout_marginTop="44dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_num2">

        <RadioButton
            android:id="@+id/rb_sumar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue_fosf"
            android:text="@string/tx_rb1"
            android:textColor="@color/gris"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_restar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue_fosf"
            android:text="@string/tx_rb2"
            android:textColor="@color/gris"
            android:textSize="18sp" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/btimg_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/style_bt_border"
        android:contentDescription="@string/tx_imgBt"
        android:onClick="agregar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:srcCompat="@mipmap/icon_add" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/style_bt_border"
        android:onClick="navegar"
        app:layout_constraintStart_toEndOf="@+id/btimg_add"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:srcCompat="@mipmap/browserr" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/style_bt_border"
        android:onClick="abrirBloc"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:srcCompat="@mipmap/notepad" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/style_bt_border"
        android:onClick="abrirBd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:srcCompat="@mipmap/database" />

</androidx.constraintlayout.widget.ConstraintLayout>